tests/generics/generic_stack.diag
generic_stack.ax:1:1: error: type mismatch: expected 23, found 3
