tests/generics/generic_stack.ax
struct Stack[T]:
    size: i32

fn push[T](val: T) -> i32:
    return 0

fn main():
    let x = push(42)
